abstract class RouteNames {
  static const String taskListPage = 'taskList';
  static const String editorPage = 'editor';
}
