...
                ),
                const Spacer(),
                Transform.scale(
                  scale: scale,
                  alignment: Alignment.centerRight,
                  child: Switch(
                    key: const Key('switchKey'),
                    activeColor: theme.blue,
                    activeTrackColor: theme.blue!.withOpacity(0.3),
                    value: editingTaskCubit.switchValue,
                    onChanged: (value) {
                      editingTaskCubit.changeSwitch(context, scale);
                    },
...
